overflow bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,13 +25,15 @@ body {
 
 	#root {
 		background-color:transparent;
-		width: 100vw;
+		width: 100%;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
 
 		display: flex;
 		flex-direction: column;
+
+		// border: 5px solid rgb(195, 6, 6);
 
 	}
 
